; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_csr.c_csr_crc16.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_csr.c_csr_crc16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @csr_crc16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @csr_crc16(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  store i32 0, i32* %9, align 4
  %10 = load i32, i32* %4, align 4
  store i32 %10, i32* %6, align 4
  br label %11

11:                                               ; preds = %47, %2
  %12 = load i32, i32* %6, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %50

14:                                               ; preds = %11
  %15 = load i32, i32* %5, align 4
  store i32 %15, i32* %9, align 4
  store i32 28, i32* %7, align 4
  br label %16

16:                                               ; preds = %39, %14
  %17 = load i32, i32* %7, align 4
  %18 = icmp sge i32 %17, 0
  br i1 %18, label %19, label %42

19:                                               ; preds = %16
  %20 = load i32, i32* %9, align 4
  %21 = ashr i32 %20, 12
  %22 = load i32*, i32** %3, align 8
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @be32_to_cpu(i32 %23)
  %25 = load i32, i32* %7, align 4
  %26 = ashr i32 %24, %25
  %27 = xor i32 %21, %26
  %28 = and i32 %27, 15
  store i32 %28, i32* %8, align 4
  %29 = load i32, i32* %9, align 4
  %30 = shl i32 %29, 4
  %31 = load i32, i32* %8, align 4
  %32 = shl i32 %31, 12
  %33 = xor i32 %30, %32
  %34 = load i32, i32* %8, align 4
  %35 = shl i32 %34, 5
  %36 = xor i32 %33, %35
  %37 = load i32, i32* %8, align 4
  %38 = xor i32 %36, %37
  store i32 %38, i32* %9, align 4
  br label %39

39:                                               ; preds = %19
  %40 = load i32, i32* %7, align 4
  %41 = sub nsw i32 %40, 4
  store i32 %41, i32* %7, align 4
  br label %16

42:                                               ; preds = %16
  %43 = load i32, i32* %9, align 4
  %44 = and i32 %43, 65535
  store i32 %44, i32* %5, align 4
  %45 = load i32*, i32** %3, align 8
  %46 = getelementptr inbounds i32, i32* %45, i32 1
  store i32* %46, i32** %3, align 8
  br label %47

47:                                               ; preds = %42
  %48 = load i32, i32* %6, align 4
  %49 = add nsw i32 %48, -1
  store i32 %49, i32* %6, align 4
  br label %11

50:                                               ; preds = %11
  %51 = load i32, i32* %5, align 4
  ret i32 %51
}

declare dso_local i32 @be32_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
